--- a/renovate.json
+++ b/renovate.json
@@ -18,13 +18,6 @@
   "postUpdateOptions": ["gomodTidy"],
   "regexManagers": [
     {
-      "description": "Upgrade prettier dependencies in .pre-commit-config.yaml",
-      "fileMatch": ["^.pre-commit-config.yaml"],
-      "matchStrings": [
-        "# renovate:\\sdatasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\s.*@(?<currentValue>.*)"
-      ]
-    },
-    {
       "description": "Upgrade hugo version in GitHub workflows",
       "fileMatch": ["(^workflow-templates|\\.github/workflows)/[^/]+\\.ya?ml$"],
       "matchStrings": ["hugo-version: \"(?<currentValue>.*)\""],
@@ -38,6 +31,12 @@
       "extractVersion": "^v(?<version>)",
       "matchDatasources": ["github-releases"],
       "matchPackageNames": ["gohugoio/hugo"]
+    },
+    {
+      "description": "Automatically merge minor updates",
+      "matchManagers": ["github-actions", "gomod", "pre-commit", "regex"],
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      "automerge": true
     }
   ]
 }
