--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  # renovate: datasource=github-tags depName=gohugoio/hugo
+  # renovate: datasource=github-releases depName=gohugoio/hugo
   HUGO_VERSION: "0.112.7"
 
 jobs:
