docs: add healthz documentation
This also fixes the RSS feed dates and includes all pages in the root RSS feed.

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -83,3 +83,8 @@ module:
       disable: false
 disableKinds:
   - taxonomy
+
+frontmatter:
+  date:
+    # Set the date to the git file date
+    - :git
