--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,9 @@ repos:
     rev: v3.0.3
     hooks:
       - id: prettier
+
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.27.1
+    hooks:
+      - id: check-metaschema
+        files: ^static/schemas/.*\.json$
