--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,12 +16,11 @@ params:
   github_repo: "https://github.com/envelope-zero/docs"
   # github_project_repo: ""
   github_branch: main
-  algolia_docsearch: false
   offlineSearch: true
   prism_syntax_highlighting: false
   ui:
     breadcrumb_disable: false
-    footer_about_disable: true
+    footer_about_enable: false
     navbar_logo: true
     navbar_translucent_over_cover_disable: false
     sidebar_menu_compact: false
